# food_ordering

./: .gitignore  README.md
backend/: README.md  pyproject.toml  start_server.py
backend/app/: auth.py  crud.py  database.py  init_db.py  main.py  models.py  schemas.py
backend/app/routers/: cart.py  items.py  orders.py  users.py
frontend/: .env  .prettierrc.json  README.md  eslint.config.json  package.json  tailwind.config.js
frontend/src/: config.ts  index.tsx
frontend/src/components/: Avatar.tsx  BillDetail.tsx  Button.tsx  Cart.tsx  Drawer.tsx  Dropdown.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  ProceedToPay.tsx  Product.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Layout/components/: Header.tsx  UserMenu.tsx
frontend/src/constants/: api.ts  constants.ts  routes.ts
frontend/src/containers/: App.tsx
frontend/src/containers/Container/: Container.tsx
frontend/src/containers/Container/components/: ProtectedRoute.tsx
frontend/src/modals/: AuthModal.tsx  OrderSuccessModal.tsx
frontend/src/models/: user.ts
frontend/src/pages/CategoryItems/: CategoryItems.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/OrderHistory/: OrderHistory.tsx
frontend/src/redux/: apiEndPoints.ts  store.ts
frontend/src/redux/features/: authSlice.ts  userSlice.ts
frontend/src/redux/services/: api.ts  auth.ts  cart.ts  items.ts  orders.ts  user.ts
